debug ban feature

--- a/app/views/admin/users.slim
+++ b/app/views/admin/users.slim
@@ -11,10 +11,11 @@
             -@users.each do |user|
                 tr
                     td = user.email
-
-                    =form_with url: "/admin/toggle_ban", method: :patch do |f|
-                       td = f.hidden_field :user_id , :value => user.id
-                       td = f.submit  "#{ban_button_name(user)}", class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
+                    td = user.id
+                    td
+                      =form_with url: "/admin/toggle_ban", method: :patch do |f|
+                        td = f.hidden_field :user_id , :value => user.id
+                        td = f.submit  "#{ban_button_name(user)}", class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
                      
 
     .mdl-cell.mdl-cell--4-col
