users filter for admin

--- a/app/views/admin/users.slim
+++ b/app/views/admin/users.slim
@@ -1,5 +1,15 @@
 
-                    
+
+.mdl-grid
+    .mdl-cell.mdl-cell--4-col
+    .mdl-cell.mdl-cell--4-col
+            =form_with url:  "/admin/users", method: :get do |form|
+                =form.select  :ban, ["all", "true", "false"]
+            
+                
+                =form.submit "отфильтровать"
+    .mdl-cell.mdl-cell--4-col
+
 .mdl-grid
     .mdl-cell.mdl-cell--4-col
     .mdl-cell.mdl-cell--4-col
@@ -13,9 +23,12 @@
                     td = user.email
                     td = user.id
                     td
-                      =form_with url: "/admin/toggle_ban", method: :patch do |f|
+                    -if !user.admin?
+                       =form_with url: "/admin/toggle_ban", method: :patch do |f|
                         td = f.hidden_field :user_id , :value => user.id
                         td = f.submit  "#{ban_button_name(user)}", class: "mdl-button mdl-js-button mdl-button--raised mdl-button--accent"
-                     
+                    
+                      
+                      
 
     .mdl-cell.mdl-cell--4-col
