featured edit and update page for user

--- a/app/views/components/_header.slim
+++ b/app/views/components/_header.slim
@@ -15,7 +15,10 @@ header.mdl-layout__header.mdl-layout__header--scroll.mdl-color--primary
               a.mdc-list-item
                 =link_to 'ваши буклисты',  book_lists_path
                 i.material-icons.mdc-list-item__graphic aria-hidden="true"  box
-               
+              
+              a.mdc-list-item
+                =link_to 'редактировать ваш профиль',  edit_user_path
+                i.material-icons.mdc-list-item__graphic aria-hidden="true"  box
     
                  
               
