--- a/app/views/components/_header.slim
+++ b/app/views/components/_header.slim
@@ -17,7 +17,7 @@ header.mdl-layout__header.mdl-layout__header--scroll.mdl-color--primary
                 i.material-icons.mdc-list-item__graphic aria-hidden="true"  box
               
               a.mdc-list-item
-                =link_to 'редактировать ваш профиль',  edit_user_path
+                =link_to 'редактировать ваш профиль',  edit_user_path(@current_user)
                 i.material-icons.mdc-list-item__graphic aria-hidden="true"  box
     
                  
